overflow fix

--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -25,6 +25,7 @@ body {
 
 main {
     width: 100%;
+    overflow-x: hidden;
     height: max-content;
     display: flex;
     justify-content: center;
